--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ main{
 .hero_content {
     max-width: 500px;
     padding-block: 90px;
+    padding-left: 2%;
 }
 
 .hero_container {
@@ -222,16 +223,22 @@ main{
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+    
 }
 
 .why_list{
-    max-width: 1169px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
     flex-wrap: wrap;
-    justify-content: space-between;
+
+}
+
+.why_logo-img1{
+    width: 309px;
+    height: 93px;
 }
 
 .why_text{
@@ -375,10 +382,14 @@ main{
 }
 
 .about_container{
-    max-width: 1216px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    overflow: hidden;
     margin-inline: auto;
-    padding-block: 60px;
-    position: relative;
+
 }
 
 .about_content{
@@ -386,15 +397,22 @@ main{
     max-width: 450px;
     flex-direction: column;
     padding-top: 100px;
+    padding-block: 90px;
+    text-align: center;
+    align-items: center;
 }
 
 .about_title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 700;
     font-size: 35px;
     letter-spacing: 2.5px;
     line-height: 59px;
     color: var(--black);
     font-family: "Montserrat", sans-serif;
+    
 }
 
 .about_desc{
@@ -404,19 +422,22 @@ main{
     line-height: 140.4%;
     color: var(--gray2);
     margin-top: 30px;
+    padding-left: 5%;
 }
 
 .about_link{
     margin-top: 30px;
-    color: var(--purple)
+    color: var(--purple);
+    padding-left: 5%;
 }
 .about_link:hover{
     text-decoration: underline;
 }
 
 .about_image{
-    position: absolute;
-    top: 60px;
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
     right: 0px;
     pointer-events: none;
     z-index: 1;
@@ -425,7 +446,7 @@ main{
 }
 
 @media (max-width: 1200px) {
-
+    
 }
 @media (max-width: 992px) {
 
@@ -456,6 +477,7 @@ main{
         max-width: 100%;
         padding-inline: 20px;
         width: 100%;
+        padding-block: 60px;
     }
     
     .hero_title {
@@ -466,21 +488,95 @@ main{
     .hero_desc {
         font-size: 16px;
     }
+    
+    .why{
+        padding-block: 100px;
+    }
+
+    .why_text {
+        font-size: 35px;
+        line-height: 100%;
+        display: flex;
+            justify-content: center;
+            text-align: center;
+    }
+
+    .galery_grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 120px;
+    }
+    
+    .item-1 { grid-column: 1; grid-row: 1; }
+    .item-2 { grid-column: 2 / 3; grid-row: 1; }
+    .item-3 { grid-column: 3; grid-row: 1; }
+    .item-4 { grid-column: 1; grid-row: 2; }
+    .item-5 { grid-column: 2; grid-row: 2; }
+    .item-6 { grid-column: 3; grid-row: 2; }
+    .item-7 { grid-column: 1; grid-row: 3; }
+    .item-8 { grid-column: 2; grid-row: 3; }
+    .item-9 { grid-column: 3; grid-row: 3; }
+    .item-10 { grid-column: 1; grid-row: 4; }
+    .item-11 { grid-column: 2 / 3; grid-row: 4; }
+
+    .about_container {
+        flex-direction: column;
+        padding-left: 5%;
+        padding-right: 5%;
+        gap: 20px;
+    }
+
+        .about_image {
+            max-width: 100%;
+            height: auto;
+        }
 }
 @media (max-width: 480px) {
     .hero_title {
-        font-size: 24px;
+        font-size: 30px;
         line-height: 28px;
     }
     
     .hero_desc {
-        font-size: 14px;
+        font-size: 18px;
     }
     
     .hero_container {
         padding-left: 15px;
         padding-right: 15px;
     }
+    
+    .hero_buttons {
+        flex-direction: column;
+        gap: 15px;
+    }
+    
+    .why_text {
+        font-size: 24px;
+        line-height: 100%;
+        display: flex;
+            justify-content: center;
+            text-align: center;
+    }
+
+    .galery_grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 100px;
+        gap: 10px;
+    }
+    
+    .item-1 { grid-column: 1; grid-row: 1; }
+    .item-2 { grid-column: 2; grid-row: 1; }
+    .item-3 { grid-column: 1; grid-row: 2; }
+    .item-4 { grid-column: 2; grid-row: 2; }
+    .item-5 { grid-column: 1; grid-row: 3; }
+    .item-6 { grid-column: 2; grid-row: 3; }
+    .item-7 { grid-column: 1; grid-row: 4; }
+    .item-8 { grid-column: 2; grid-row: 4; }
+    .item-9 { grid-column: 1; grid-row: 5; }
+    .item-10 { grid-column: 2; grid-row: 5; }
+    .item-11 { grid-column: 1 / 3; grid-row: 6; }
+
+
 }
 @media (max-width: 320px) {
 
