--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ main{
 .item-9 { grid-row: span 2; }
 
 .about{
-   position: relative;
+    position: relative;
     
 }
 
@@ -407,7 +407,7 @@ main{
     gap: 40px;
     overflow: hidden;
     margin-inline: auto;
-
+    
 }
 
 .about_content{
@@ -458,9 +458,80 @@ main{
     pointer-events: none;
     z-index: 1;
     max-height: 90%;
- 
+    
 }
 
+.page_1{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.hero1{
+    display: flex;
+    overflow: hidden;
+    min-height: 100vh;;
+    overflow-x: hidden;
+    width: 100%;
+    background-color: #FDECE8;
+}
+
+.hero_container1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.content1{
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+}
+
+.hero_title1{
+    font-weight: 700;
+    font-size: 50px;
+    letter-spacing: 2.5px;
+    line-height: 50px;
+    color: var(--gray);
+    margin-bottom: 90px;
+    margin-top: 4%;
+    margin-left: 20px;
+}
+
+.hero_img1{
+    flex: 1;
+    max-width: 45%;
+    height: auto;
+    margin-top: 75px;
+}
+
+.hero_btn1{
+    margin-top: 0px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    height: 50px;
+    border-radius: 24px;
+    padding: 15px 40px;
+    font-size: 24px;
+    font-weight: 400;
+    color: white;
+    background: var(--purple);
+    transition: 0.3s;
+}
+
+.hero_btn1.active, .hero_btn1:hover{
+    opacity: 80%;
+}
 @media (max-width: 1200px) {
     .hero_container {
         flex-direction: flex;
@@ -529,6 +600,7 @@ main{
         width: 50%;
         justify-content: space-between;
     }
+}
 @media (max-width: 992px) {
 
     .hero_image {
@@ -811,6 +883,41 @@ main{
     .item-10 { grid-column: 2; grid-row: 5; }
     .item-11 { grid-column: 1 / 3; grid-row: 6; }
 
+    .page_1{
+        position: relative;
+        width: 100%;
+    }
+    
+    .hero1{
+        display: flex;
+    }
+
+    .hero_container1{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content1{
+        display: flex;
+        justify-content: center;
+    }
+
+    .hero_title1{
+        font-size: 50px;
+        line-height: 100%;
+        letter-spacing: 2%;
+        display: flex;
+        text-align: center;
+        margin: 4% 10px 90px 10px;
+    }
+
+    .hero_img1{
+        width: 100%;
+        height: auto;
+        margin-top: 0px;
+        display: block;
+        flex: none;
+    }
 
 }
 @media (max-width: 320px) {
@@ -818,10 +925,3 @@ main{
 }
 
 
-// PAGE-ABOUT-US //
-
-
-.page2{
-    background: #FDECE8;
-    width: 100%;
-}
